# python-starter

./: .gitignore  class-notes.md  pyproject.toml  testing.ipynb
.devcontainer/: devcontainer.json
hello/: main.py  testing.ipynb
tests/: test_main.py
