[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Pervez Iqbal", email = "pervezfunctor@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=6.2.5",
    "black>=21.12b0",
    "flake8>=4.0.1",
    "pyright>=0.0.13",
    "mypy>=0.930",
    "jupyterlab>=3.2.5",
    "voila>=0.3.0",
    "notebook>=6.4.6",
    "ipykernel>=6.6.0",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
test = "pdm run pytest tests"

[tool.mypy]
python_version = "3.9"
plugins = [
    "pydantic.mypy"
]

strict = true
warn_return_any = true
warn_unused_configs = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
warn_return_any = true
