[project]
name = "python-starter"
version = "0.0.1"
description = "Modern python project template"
authors = [
    {name = "Pervez Iqbal", email = "pervezfunctor@gmail.com"},
]

requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyrsistent>=0.18.0",
    "fastapi>=0.70.1",
    "uvicorn>=0.16.0",
    "aiohttp>=3.8.1",
    "aiodns>=3.0.0",
    "chardet>=4.0.0",
    "charset-normalizer>=2.0.9",
    "Brotli>=1.0.9",
    "uvloop>=0.16.0",
    "httptools>=0.3.0",
]

[project.urls]
homepage = ""

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=6.2.5",
    "pyright>=0.0.13",
    "mypy>=0.930",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
test = "pdm run pytest tests"

[tool.mypy]
python_version = "3.10"
plugins = [
    "pydantic.mypy"
]

strict = true
warn_return_any = true
warn_unused_configs = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
warn_return_any = true
